deploy-v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-jtp
  namespace: exo-jtp-prod
  labels:
    app: docker-jtp
    version: "4"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-jtp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: docker-jtp
        version: "4"
    spec:
      imagePullSecrets:
      - name: dockerhub-creds
      containers:
      - name: docker-jtp
        image: iandrewitz/docker-jtp:4
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
          limits:
            memory: 2Gi
            cpu: 1000m
        startupProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 24
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 150
          periodSeconds: 30
          failureThreshold: 3
